<resources>
    <string name="app_name">Melophile</string>

    <string name="more_label">View All</string>
    <string name="layout_manager" translatable="false">StaggeredGridLayoutManager</string>
    <string name="text_layout_manager" translatable="false">LinearLayoutManager</string>
    <string name="home_layout_manager" translatable="false">LinearLayoutManager</string>

    <string name="profiles_label">Profiles</string>
    <string name="follow_label">Follow</string>
    <string name="tracks_label">Tracks</string>
    <string name="albums_label">Albums</string>
    <string name="playlist_label">Playlists</string>
    <string name="track_history_label">Recent Tracks</string>
    <string name="playlist_history_label">Recent Playlists</string>
    <string name="no_followers_message">No Followers</string>
    <string name="no_loved_message">No Favorite Tracks</string>
    <string name="loved_title">Favorite Tracks</string>
    <string name="followers_title">Followers</string>
    <string name="all_listening_label">See All Listening History</string>
    <string name="log_out_label">Log Out</string>

    <string name="of_label"> of </string>
    <string name="chooseToWhomToSend">Send to</string>
    <string name="user_empty_media">This user has no media items</string>
    <string name="item_search">Search</string>
    <string name="search_hint">Search for songs, artists</string>
    <string name="login_label">Get In</string>
    <string name="invitation_label">Invite Friends?</string>
    <string name="welcome_to_app">Welcome\n To Melophile</string>
    <string name="following_label">Following</string>
    <string name="no_played_history_label">You have no track history so far</string>
    <string name="tap_to_continue_message">Tap To Play Your History</string>

    <string name="share_action">Share</string>
    <string name="background_trans_name" translatable="false">background_trans</string>
    <string name="art_trans_name" translatable="false">playlist_art_trans</string>
    <string name="playlist_title_trans_name" translatable="false">playlist_title_trans</string>
    <string name="user_trans_name" translatable="false">user_trans</string>
    <string name="search_trans" translatable="false">search_trans</string>
    <string name="invite_options_item">Invite Friends</string>

    <string name="invite_message">Hi There! I invite you to try this app:)</string>
    <string name="invitation_title">Melophile Invitation</string>
    <string name="empty_message">No Data</string>
    <string name="error_message">Error has occurred, please check your network connection</string>


    <plurals name="followers">
        <item quantity="zero">No Followers</item>
        <item quantity="one">%s\n follower</item>
        <item quantity="other">%s\n followers</item>
    </plurals>
    <plurals name="followers_horizontal">
        <item quantity="zero">No Followers</item>
        <item quantity="one">%s follower</item>
        <item quantity="other">%s followers</item>
    </plurals>
    <plurals name="tracks">
        <item quantity="zero">No Tracks</item>
        <item quantity="one">%s\n track</item>
        <item quantity="other">%s\n tracks</item>
    </plurals>
    <plurals name="likes">
        <item quantity="zero">No liked tracks</item>
        <item quantity="one">%s\n like</item>
        <item quantity="other">%s\n likes</item>
    </plurals>

    <plurals name="hours">
        <item quantity="zero"> </item>
        <item quantity="one">%s hr</item>
        <item quantity="other">%s hrs</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero"> </item>
        <item quantity="other">%s min</item>
    </plurals>

    <!-- Content Description -->
    <string name="play_pause">Play or pause music if playing</string>
    <string name="next">Play next song</string>
    <string name="get_in_button">Get in by clicking this button</string>
    <string name="apps_background">App background image</string>
    <string name="invite_button">Invite friends by clicking this button</string>
    <string name="list_of_songs">List of songs</string>
    <string name="list_of_playlists">List of playlists</string>
    <string name="list_of_followers">List of followers</string>
    <string name="press_search">Press for search</string>
    <string name="press_search_tabs">Move left/right to filter the search</string>
    <string name="search_content">Search result</string>
    <string name="wait_for_result">Wait for result to appear</string>
    <string name="recently_played">Recently played</string>
    <string name="user_description">User description</string>
    <string name="prev">Play previous song</string>
    <string name="repeat">Repeat the song when it ends</string>
    <string name="shuffle">Shuffle songs</string>
    <string name="song_cover">Song image</string>
    <string name="play_playlist">Play playlist</string>
    <string name="share">Share with the playlist</string>
    <string name="follow_user">Follow selected user</string>
    <string name="playlist_tags">Playlist tags</string>
    <string name="playlist_tracks_number">Number of tracks in playlist</string>
    <string name="playlist_cover">Playlist image</string>
    <string name="track_name">Track name</string>
    <string name="user_name">User name</string>
    <string name="songs_count">Number of songs</string>
    <string name="track_artist">Track artist</string>
    <string name="user_photo">User photo</string>
    <string name="playlist_duration">Playlist duration</string>
    <string name="playlist_likes">Playlist likes</string>
    <string name="track_duration">Song duration</string>
    <string name="song_progress_bar">Song progress bar, you can set current position</string>
    <string name="song_start_time">Song start time</string>
    <string name="song_end_time">Song end time</string>
    <string name="playlist_title">Playlist title</string>
    <string name="back_button">Back button</string>
    <string name="user_liked_tracks">User liked tracks</string>
    <string name="user_followers">User followers</string>
</resources>
