<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <android.support.v7.widget.RecyclerView
        android:id="@+id/categories"
        app:layoutManager="@string/layout_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:contentDescription="@string/list_of_songs"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/song_progress_bar"/>
</RelativeLayout>