<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_medium"
    android:background="#ffff"
    xmlns:tools="http://schemas.android.com/tools">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_art"
        tools:src="@drawable/evolve"
        android:transitionName="@string/user_trans_name"
        android:layout_width="@dimen/follower_size"
        android:layout_height="@dimen/follower_size"
        android:layout_marginStart="@dimen/spacing_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/song_cover"/>
    <TextView
        android:id="@+id/user_name"
        tools:text="Imagine Dragons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Widget.Title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintLeft_toRightOf="@+id/user_art"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/user_name"/>
    <TextView
        android:id="@+id/followers_count"
        android:drawableStart="@drawable/ic_user_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="200"
        android:textColor="@color/colorPrimary"
        android:drawablePadding="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        style="@style/Widget.NumberText"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/user_name"
        android:contentDescription="@string/user_followers"/>
</android.support.constraint.ConstraintLayout>