<com.vpaliy.melophile.ui.view.TranslatableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:paddingBottom="@dimen/spacing_large"
    android:minHeight="@dimen/shot_collapsed_app_bar_height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/author"
        tools:text="Imagine Dragons"
        style="@style/Widget.CommentAuthor"
        android:maxWidth="80dp"
        android:maxLines="2"
        android:layout_marginTop="@dimen/spacing_huge"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginRight="@dimen/spacing_small"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintTop_toBottomOf="@+id/share"
        app:layout_constraintRight_toLeftOf="@+id/user_avatar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:src="@drawable/evolve"
        android:transitionName="@string/user_trans_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/author"
        app:layout_constraintTop_toTopOf="@+id/author"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.65"
        android:id="@+id/user_avatar" />

    <View
        android:id="@+id/title_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@+id/playlist_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        tools:text="I Love San Francisco"
        android:textSize="30dp"
        style="@style/Widget.BigTitle"
        android:padding="@dimen/spacing_large"
        android:transitionName="@string/playlist_title_trans_name"
        android:id="@+id/playlist_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- <com.vpaliy.chips_lover.ChipsLayout
         android:id="@+id/chipsContainer"
         android:orientation="horizontal"
         app:chip_layout_horizontal_margin="@dimen/spacing_small"
         app:chipTextColor="@color/blue_grey_700"
         app:chipTextStyle="@style/Widget.HashTag"
         android:layout_width="0dp"
         app:chips_array="@array/temp"
         app:layout_constraintWidth_default="wrap"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/spacing_medium"
         app:layout_constraintTop_toBottomOf="@+id/playlist_title"
         app:layout_constraintLeft_toLeftOf="parent" />  -->



    <TextView
        android:id="@+id/tracks_number"
        android:drawableTop="@drawable/ic_playlist_album"
        android:drawablePadding="@dimen/spacing_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="138 Likes"
        android:scaleX="0"
        android:scaleY="0"
        tools:scaleY="1"
        tools:scaleX="1"
        app:layout_constraintLeft_toLeftOf="@+id/playlists_count"
        app:layout_constraintRight_toLeftOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/playlists_count"
        app:layout_constraintBottom_toBottomOf="@+id/playlists_count" />


    <TextView
        android:id="@+id/playlists_count"
        android:scaleX="0"
        android:scaleY="0"
        tools:scaleY="1"
        tools:scaleX="1"
        android:layout_marginTop="@dimen/spacing_huge"
        android:drawableTop="@drawable/ic_playlist_duration"
        android:drawablePadding="@dimen/spacing_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="28 mins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_title"
        app:layout_constraintRight_toLeftOf="@+id/tracks_number"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <TextView
        android:id="@+id/share"
        android:scaleX="0"
        android:scaleY="0"
        tools:scaleY="1"
        tools:scaleX="1"
        android:text="@string/share_action"
        android:drawablePadding="@dimen/spacing_medium"
        android:drawableTop="@drawable/ic_playlist_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tracks_number"
        app:layout_constraintLeft_toRightOf="@+id/tracks_number"
        app:layout_constraintBottom_toBottomOf="@+id/tracks_number"
        app:layout_constraintRight_toRightOf="parent" />
</com.vpaliy.melophile.ui.view.TranslatableLayout>